removed some useless code and changed some visibility settings (according to android studio only)