@@ -63,9 +63,6 @@ public class NewRequest extends NavigationActivity {
         EditText mName;
         EditText mPrice;
 
-        public PlaceholderFragment() {
-        }
-
         @Override
         public View onCreateView(LayoutInflater inflater, ViewGroup container,
                                  Bundle savedInstanceState) {
@@ -80,7 +77,7 @@ public class NewRequest extends NavigationActivity {
                     if(validateInput()){
                         FirebaseInterfacer.interfacer.addRequest(new Request(
                                 mName.getText().toString(),
-                                new Double(mPrice.getText().toString())
+                                Double.valueOf(mPrice.getText().toString())
                         ));
                         mName.getText().clear();
                         mPrice.getText().clear();
@@ -95,7 +92,7 @@ public class NewRequest extends NavigationActivity {
 
         private boolean validateInput(){
             try{
-                new Double(mPrice.getText().toString());
+                Double.valueOf(mPrice.getText().toString());
                 return true;
             } catch (NumberFormatException ex) {
                 mPrice.setError("Number not a valid price.");
